src/main/java/org/example/object_calisthenics/e_one_dot_per_line/good/Pet.java
package org.example.object_calisthenics.e_one_dot_per_line.good;

import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class Pet {
	private final String name;
	private final String kind;
}
